feat: added SSE for notificatios
