# backend/src/routes.ts
@@ -3,8 +3,8 @@ import { Application } from 'express';
 import authRoutes from './features/auth/auth.routes';
 import turbineRoutes from './features/turbines/turbine.routes';
 import inspectionRoutes from './features/inspections/inspection.routes';
-// import repairPlanRoutes from './features/repair-plans/repair-plan.routes.js';
-// import notificationRoutes from './features/notifications/notification.routes.js';
+import repairPlanRoutes from './features/repair-plans/repair-plan.routes';
+import notificationRoutes from './features/notifications/notification.routes';
 
 export const registerRoutes = (app: Application) => {
   const API_PREFIX = '/api/v1';
@@ -12,6 +12,6 @@ export const registerRoutes = (app: Application) => {
   app.use(API_PREFIX, authRoutes);
   app.use(API_PREFIX, turbineRoutes);
   app.use(API_PREFIX, inspectionRoutes);
-  //   app.use(API_PREFIX, repairPlanRoutes);
-  //   app.use(API_PREFIX, notificationRoutes);
+  app.use(API_PREFIX, repairPlanRoutes);
+  app.use(API_PREFIX, notificationRoutes);
 };
